--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     ]
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-preact-pure": "^4.0.0",
     "eslint": "^8.30.0",
@@ -25,7 +26,7 @@
     "jest-preset-preact": "^4.0.5",
     "preact-cli": "^3.4.2",
     "sirv-cli": "^2.0.2",
-    "cross-env": "^7.0.3"
+    "tailwindcss": "^3.3.5"
   },
   "dependencies": {
     "preact": "^10.11.3",
